--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos/estilos.css">
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="container-fluid">
         <main class="row">
             <section class="col-12"> 
-                <h1 class="display-3 text-center text-white"> Ajedrez </h1> 
+                <h1 class="display-3 text-center text-white londrina-sketch-regular"  > Ajedrez </h1> 
             </section>
 
             <section class="col-1"></section>
